@@ -1,5 +1,10 @@
 2011-06-16	The InnoDB Team
 
+	* page/page0zip.c, rem/rem0rec.c:
+	Fix Bug#61191 question about page_zip_available()
+
+2011-06-16	The InnoDB Team
+
 	* btr/btr0btr.c, btr/btr0cur.c, include/btr0btr.h, include/btr0cur.h,
 	include/btr0cur.ic, include/buf0buf.h, include/buf0buf.ic,
 	include/page0cur.ic, include/page0page.h, include/page0page.ic,
